[gd_scene load_steps=35 format=2]

[ext_resource path="res://dnf/saber/6.png" type="Texture" id=1]
[ext_resource path="res://dnf/saber/3.png" type="Texture" id=2]
[ext_resource path="res://dnf/saber/2.png" type="Texture" id=3]
[ext_resource path="res://dnf/saber/9.png" type="Texture" id=4]
[ext_resource path="res://dnf/saber/8.png" type="Texture" id=5]
[ext_resource path="res://dnf/saber/0.png" type="Texture" id=6]
[ext_resource path="res://dnf/saber/7.png" type="Texture" id=7]
[ext_resource path="res://dnf/saber/1.png" type="Texture" id=8]
[ext_resource path="res://dnf/saber/4.png" type="Texture" id=9]
[ext_resource path="res://dnf/saber/91.png" type="Texture" id=10]
[ext_resource path="res://dnf/saber/90.png" type="Texture" id=11]
[ext_resource path="res://dnf/saber/95.png" type="Texture" id=12]
[ext_resource path="res://dnf/saber/94.png" type="Texture" id=13]
[ext_resource path="res://dnf/saber/92.png" type="Texture" id=14]
[ext_resource path="res://dnf/saber/93.png" type="Texture" id=15]
[ext_resource path="res://dnf/saber/11.png" type="Texture" id=16]
[ext_resource path="res://dnf/saber/12.png" type="Texture" id=17]
[ext_resource path="res://dnf/saber/17.png" type="Texture" id=18]
[ext_resource path="res://dnf/saber/13.png" type="Texture" id=19]
[ext_resource path="res://dnf/saber/18.png" type="Texture" id=20]
[ext_resource path="res://dnf/saber/14.png" type="Texture" id=21]
[ext_resource path="res://dnf/saber/20.png" type="Texture" id=22]
[ext_resource path="res://dnf/saber/19.png" type="Texture" id=23]
[ext_resource path="res://dnf/saber/16.png" type="Texture" id=24]
[ext_resource path="res://dnf/saber/15.png" type="Texture" id=25]
[ext_resource path="res://dnf/Hurt.gd" type="Script" id=26]
[ext_resource path="res://dnf/Player.gd" type="Script" id=27]
[ext_resource path="res://script/StateMachine/StateMachinePlayer.gd" type="Script" id=28]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36.2766, 56.3621 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 53.1326, 30.5163 )

[sub_resource type="Animation" id=3]
resource_name = "idle_combat"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 20, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Hit/HitBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 0.25, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( -2, 0 ), Vector2( 80, 0 ), Vector2( 60, 5 ), Vector2( 10, 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Hit/HitBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.601308 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Hit/HitBox:shape:extents")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 53.1326, 30.5163 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Hit/HitBox:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 115.744, -79.0357 ) ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.351734, 0.430531, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "hit"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "横砍"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 22 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Hit/HitBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.29992 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 20, 0 ), Vector2( 80, 0 ), Vector2( 20, 0 ), Vector2( -10, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.204083 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hit"
} ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 33.4026, 10 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 27 )

[node name="StateMachinePlayer" type="Node" parent="."]
script = ExtResource( 28 )

[node name="pivot" type="Position2D" parent="."]
position = Vector2( -23.5983, -1.49831 )

[node name="Sprite" type="Sprite" parent="pivot"]
position = Vector2( 3.74579, -53.9391 )
texture = ExtResource( 6 )

[node name="Hurt" type="Area2D" parent="pivot" groups=[
"hurtbox",
]]
script = ExtResource( 26 )

[node name="HurtBox" type="CollisionShape2D" parent="pivot/Hurt"]
modulate = Color( 0, 0, 1, 1 )
position = Vector2( 25.4712, -53.9391 )
shape = SubResource( 1 )

[node name="Hit" type="Area2D" parent="pivot" groups=[
"hitbox",
]]

[node name="HitBox" type="CollisionShape2D" parent="pivot/Hit"]
modulate = Color( 0, 1, 0, 1 )
position = Vector2( 115.744, -79.0357 )
shape = SubResource( 2 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle_combat = SubResource( 3 )
"anims/斜内砍" = SubResource( 4 )
"anims/横砍" = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.24741, -11.2373 )
shape = SubResource( 6 )
[connection signal="make_damage" from="pivot/Hurt" to="." method="_on_Hurt_make_damage"]
[connection signal="area_entered" from="pivot/Hit" to="." method="_on_Hit_area_entered"]
[connection signal="area_exited" from="pivot/Hit" to="." method="_on_Hit_area_exited"]
